<resources>
    <string name="app_name">Ot</string>


    <!--ActivitySecurityDialog (Main)-->
    <string name="ActivityMainCommandXact">My Xact</string>
    <string name="ActivityMainCommandSecurityDialog">Diálogos de seguridad</string>
    <string name="ActivityMainCommandRecord">Condiciones inseguras</string>
    <string name="ActivityMainCommandSector">Sector</string>
    <string name="ActivityMainCommandProcess">Proceso</string>

    <!--    ActivitySetting (Main):-->
    <string name="ActivityMainCommandSetting">Setting</string>
    <string name="ActivityMainCommandSettingUser">Usuarios</string>
    <string name="ActivityMainCommandSettingMenu">Menus</string>
    <string name="ActivityMainCommandSettingProfile">Perfiles</string>
    <string name="ActivityMainCommandSettingProfileUser">Perfiles por Usuario</string>
    <string name="ActivityMainCommandSettingProfileMenu">Menus por perfiles</string>

    <!--Xact (Registro):-->
    <string name="DialogXactEvent">Evento</string>
    <string name="DialogXactTitle">Título</string>
    <string name="DialogXactProcess">Proceso</string>
    <string name="DialogXactSector">Sector</string>
    <string name="DialogXactPlant">Planta</string>
    <string name="DialogXactDate">Fecha</string>

<!--    Setting (User):-->
    <string name="DialogSettingUserName">Nombre</string>
    <string name="DialogSettingUserMail">Correo</string>
    <string name="DialogSettingUserId">Id(LX)</string>
    <string name="DialogSettingUserPlant">Planta</string>

    <!--ActivityMain:-->
    <string name="ActivityMainCommandMaster">Master</string>
    <string name="ActivityMainCommandContact">Contactos</string>

    <string name="ActivityMainCommandPerson">Personas</string>
    <string name="ActivityMainCommandOperation">Operaciones</string>
    <string name="ActivityMainCommandAutoFillData">Auto data</string>
    <string name="ActivityMainCommandAutoFillDataBatch">Auto data (add batch)</string>

    <!--Batch:-->
    <string name="DialogBatchDueDate">Vencimiento</string>
    <string name="DialogBatchReceiverQty">Recepción</string>
    <string name="DialogBatchCreateDate">Creación</string>
    <string name="DialogBatchRelation">Ítem</string>
    <string name="DialogBatchValueCode">Batch</string>

    <!--ActivityItemOperation-->
    <string name="ActivityItemOperationBatchText">Lotes</string>
    <string name="ActivityItemOperationMoneyText">Divisas</string>
    <string name="ActivityItemOperationOperationText">Operaciones</string>
    <string name="ActivityItemOperationOperationDetailText">Operaciones (detalle)</string>
    <string name="ActivityItemOperationWarehouseText">Depósitos</string>
    <string name="ActivityItemOperationSectionText">Localizaciones</string>

    <!--ActivityItem-->
    <string name="ActivityMasterItemText">Ítem</string>
    <string name="ActivityMasterCompanyText">Empresas</string>
    <string name="ActivityItemTypeUnitText">Unidades de medida</string>
    <string name="ActivityItemTypeProductText">Tipo de producto</string>
    <string name="ActivityItemTypePlantText">Tipo de planta</string>
    <string name="ActivityItemProductPriceText">Precios por producto</string>
    <string name="ActivityItemProductPictureText">Imágenes por producto</string>


    <string name="ActivityXactRecordText">Registros</string>
    <string name="ActivityXactSectorText">Sector</string>
    <string name="ActivityXactProcessText">Proceso</string>

    <!--    HintForParent-->
    <string name="HintParentForCompany">Empresa</string>
    <string name="HintParentForProduct">Producto</string>

    <!--ActionResultForContact-->
    <string name="ActionResultForContactPhone">Teléfono</string>
    <string name="ActionResultForContactMail">Correo</string>
    <string name="ActionResultForContactAddress">Dirección</string>

    <!--ActionResultForCompany-->
    <string name="ActionResultForCompanyItem">Ítem</string>
    <string name="ActionResultForCompanyWarehouse">Depósitos</string>

    <!--ActionResultForProduct-->
    <string name="ActionResultForProductPrice">Precios</string>
    <string name="ActionResultForProductPicture">Imágenes</string>
    <string name="ActionResultForProductBatch">Lotes</string>

    <!--ActionResultForOperation-->
    <string name="ActionResultForSection">Localizaciones</string>


    <!--Company:-->
    <string name="DialogCompanyName">Empresa</string>

    <!--Product:-->
    <string name="DialogProductRelation">Empresa</string>
    <string name="DialogItemName">Ítem</string>
    <string name="DialogProductCode">Código</string>
    <string name="DialogProductProviderCode">Código del proveedor</string>
    <string name="DialogProductCodeBar">Código de barras</string>
    <string name="DialogItemShellLife">Vida útil</string>
    <string name="DialogItemShellLifeAlert">Vida útil (alerta)</string>
    <string name="DialogProductHasStock">Es Stockeable</string>

    <!--Warehouse:-->
    <string name="DialogWarehouseName">Depósito</string>
    <string name="DialogWarehousePrefix">Abreviatura</string>
    <string name="DialogWarehouseLocation">Dirección</string>
    <string name="DialogWarehouseRelation">Empresa</string>

    <!--Section:-->
    <string name="DialogSectionName">Localización</string>
    <string name="DialogSectionRelation">Depósito</string>
    <string name="DialogSectionType">Tipo</string>
</resources>