<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/DialogCrudTextMargin"
    android:layout_marginTop="@dimen/DialogCrudTextMargin"
    android:layout_marginEnd="@dimen/DialogCrudTextMargin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/DialogProductMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.vsg.helper.ui.widget.text.CustomInputText
                android:id="@+id/DialogProductRelation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:hint="@string/DialogProductRelation"
                app:customType="READ_ONLY_TEXT" />

            <RelativeLayout
                android:id="@+id/DialogProductFields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/DialogCrudLayoutMargin"
                android:paddingStart="@dimen/DialogCrudLayoutMargin"
                android:layout_below="@+id/DialogProductRelation">

                <com.vsg.helper.ui.widget.text.CustomInputText
                    android:id="@+id/DialogItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/DialogItemName"
                    app:customType="INT" />

                <com.vsg.helper.ui.widget.spinner.CustomSpinner
                    android:id="@+id/DialogItemTypeUnit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/DialogCrudPadding"
                    app:customSpinnerTitle="@string/ActivityItemTypeUnitText"
                    android:layout_below="@+id/DialogItemName"/>

                <com.vsg.helper.ui.widget.spinner.CustomSpinner
                    android:id="@+id/DialogItemTypeProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/DialogCrudPadding"
                    app:customSpinnerTitle="@string/ActivityItemTypeProductText"
                    android:layout_below="@+id/DialogItemTypeUnit"/>

                <com.vsg.helper.ui.widget.spinner.CustomSpinner
                    android:id="@+id/DialogItemTypePlant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/DialogCrudPadding"
                    app:customSpinnerTitle="@string/ActivityItemTypePlantText"
                    android:layout_below="@+id/DialogItemTypeProduct"/>

                <LinearLayout
                    android:id="@+id/DialogItemParameterShellLife"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/DialogItemTypePlant"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.vsg.helper.ui.widget.text.CustomInputText
                        android:id="@+id/DialogItemShellLife"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:customType="INT"
                        android:hint="@string/DialogItemShellLife" />

                    <com.vsg.helper.ui.widget.text.CustomInputText
                        android:id="@+id/DialogItemShellLifeAlert"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:customType="INT"
                        android:hint="@string/DialogItemShellLifeAlert" />
                </LinearLayout>

            </RelativeLayout>

            <include
                layout="@layout/dialog_generic_item_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/DialogProductFields" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>