<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/DialogCrudTextMargin"
    android:layout_marginTop="@dimen/DialogCrudTextMargin"
    android:layout_marginEnd="@dimen/DialogCrudTextMargin"
    android:layout_marginBottom="@dimen/DialogCrudTextMargin">

    <com.vsg.helper.ui.widget.text.CustomInputText
        android:id="@+id/DialogSettingUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/DialogCrudPictureMargin"
        android:hint="@string/DialogSettingUserName"
        android:padding="@dimen/DialogCrudTextPadding" />

    <com.vsg.helper.ui.widget.text.CustomInputText
        android:id="@+id/DialogSettingUserId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DialogSettingUserName"
        android:layout_marginTop="@dimen/DialogCrudPictureMargin"
        android:hint="@string/DialogSettingUserId"
        android:padding="@dimen/DialogCrudTextPadding" />

    <com.vsg.helper.ui.widget.text.CustomInputText
        android:id="@+id/DialogSettingUserMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DialogSettingUserId"
        android:layout_marginTop="@dimen/DialogCrudPictureMargin"
        android:hint="@string/DialogSettingUserMail"
        app:customType="TEXT"
        android:padding="@dimen/DialogCrudTextPadding" />

    <com.vsg.helper.ui.widget.spinner.CustomSpinner
        android:id="@+id/DialogSettingUserPlant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DialogSettingUserMail"
        android:layout_marginTop="@dimen/DialogCrudPictureMargin"
        app:customSpinnerTextSize="@integer/CustomSpinnerTextSize"
        app:customSpinnerTitle="@string/DialogSettingUserPlant" />

    <include
        layout="@layout/dialog_generic_item_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DialogSettingUserPlant"
        android:layout_marginTop="@dimen/DialogCrudPictureMargin" />

</RelativeLayout>