<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/DialogCrudTextMargin"
    android:layout_marginTop="@dimen/DialogCrudTextMargin"
    android:layout_marginEnd="@dimen/DialogCrudTextMargin"
    android:layout_marginBottom="@dimen/DialogCrudTextMargin">

    <RelativeLayout
        android:id="@+id/DialogXactRecordMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/dialog_generic_picture_choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/DialogXactRecordPicture" />

        <!--        <com.vsg.helper.ui.widget.imageView.CustomImageViewDobleTap-->
        <!--            android:id="@+id/DialogXactRecordPicture"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="@dimen/DialogXactRecordPictureSize"-->
        <!--            android:layout_margin="@dimen/DialogCrudPictureMargin"-->
        <!--            android:background="@drawable/shadow_view"-->
        <!--            android:scaleType="fitCenter"-->
        <!--            android:src="@drawable/pic_camera_alpha" />-->

    </RelativeLayout>

    <com.vsg.helper.ui.widget.text.CustomInputText
        android:id="@+id/DialogXactRecordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/DialogXactRecordMain"
        android:layout_marginTop="@dimen/DialogCrudPictureMargin"
        android:hint="@string/DialogXactTitle"
        android:padding="@dimen/DialogCrudTextPadding" />

    <RelativeLayout
        android:id="@+id/DialogXactRecordData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/DialogXactRecordTitle">

        <LinearLayout
            android:id="@+id/DialogXactRecordEventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:orientation="horizontal">

            <com.vsg.helper.ui.widget.spinner.CustomSpinner
                android:id="@+id/DialogXactRecordEvent"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:customSpinnerTextSize="@integer/CustomSpinnerTextSize"
                app:customSpinnerTitle="@string/DialogXactEvent" />

            <com.vsg.helper.ui.widget.text.CustomInputText
                android:id="@+id/DialogXactRecordDate"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/DialogCrudPictureMargin"
                android:layout_marginTop="@dimen/DialogCrudPictureMargin"
                android:layout_weight="1"
                android:hint="@string/DialogXactDate"
                android:padding="@dimen/DialogCrudTextPadding"
                app:customType="DATE" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/DialogXactRecordSectorPlant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/DialogXactRecordEventDate"
            android:gravity="center"
            android:orientation="horizontal">

            <com.vsg.helper.ui.widget.spinner.CustomSpinner
                android:id="@+id/DialogXactRecordSector"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:customSpinnerTextSize="@integer/CustomSpinnerTextSize"
                app:customSpinnerTitle="@string/DialogXactSector" />

            <com.vsg.helper.ui.widget.spinner.CustomSpinner
                android:id="@+id/DialogXactRecordPlant"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/DialogCrudPictureMargin"
                android:layout_weight="1"
                app:customSpinnerTextSize="@integer/CustomSpinnerTextSize"
                app:customSpinnerTitle="@string/DialogXactPlant" />

        </LinearLayout>

    </RelativeLayout>

    <include
        layout="@layout/dialog_generic_item_base"
        android:layout_marginTop="@dimen/DialogCrudPictureMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DialogXactRecordData" />

</RelativeLayout>